Simplify Dockerfile and add comments

--- a/0-angular-app/Dockerfile
+++ b/0-angular-app/Dockerfile
@@ -1,16 +1,21 @@
-FROM nginx:1.19.7 AS base
-
+# We use the node image to compile our angular app into static content
 FROM node:14.16.0-buster-slim AS node
+# This node environment is used to build the application, not to run it
 ENV NODE_ENV=development
-RUN npm i -g npm@7.6.1
-ENV NPM_CONFIG_PREFIX=/home/node/.npm-global \
-    PATH=$PATH:/home/node/.npm-global/bin
-RUN npm i -g @angular/cli@11.2.3
+# Make sure we've got a proper version of npm
+RUN npm i -g npm@7.6.2
+# Set the working directory where we build our project
 WORKDIR /src
+# Packages change less frequently, so we restore them first
 COPY rasbuild/package.json rasbuild/package-lock.json ./
+# CI is faster than install and we want to install all packages
 RUN npm ci
+# Now add the rest of the application files ...
 COPY rasbuild/ ./
-RUN ng build --prod
+# ... and build the actual application in prod mode.
+RUN npm run build --prod
 
-FROM base AS final
+# The nginx image is the base for our target image.
+FROM nginx:1.19.7 AS final
+# Copy the static files to the nginx web root
 COPY --from=node /src/dist/rasbuild /usr/share/nginx/html
